--- a/frontend/src/css/dashboard.css
+++ b/frontend/src/css/dashboard.css
@@ -298,15 +298,15 @@ body.rtl .card .card-title>*:first-child {
   opacity: 1;
 }
 
-.card#share .input-group {
+.input-group {
   display: flex;
 }
 
-.card#share .input-group * {
+.input-group * {
   border: none;
 }
 
-.card#share .input-group input {
+.input-group input {
   flex: 1;
 }
 
