--- a/frontend/src/css/styles.css
+++ b/frontend/src/css/styles.css
@@ -15,6 +15,7 @@
 @import "./dashboard.css";
 @import "./login.css";
 @import "./mobile.css";
+@import "./context-menu.css";
 
 .link {
   color: var(--blue);
