style: list name auto wrap

--- a/frontend/src/css/listing.css
+++ b/frontend/src/css/listing.css
@@ -238,6 +238,9 @@ body.rtl #listing {
 
 #listing.list .name {
   font-weight: normal;
+  word-wrap: break-word;
+  word-break: break-all;
+  white-space: pre-wrap;
 }
 
 #listing.list .item.header .name {
