--- a/frontend/src/css/_inputs.css
+++ b/frontend/src/css/_inputs.css
@@ -1,35 +1,35 @@
 .input {
-  background: var(--surfacePrimary);
-  color: var(--textSecondary);
-  border: 1px solid var(--borderPrimary);
-  border-radius: 0.1em;
-  padding: 0.5em 1em;
-  transition: 0.2s ease all;
+  border-radius: .1em;
+  padding: .5em 1em;
+  background: white;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: .2s ease all;
+  color: #333;
   margin: 0;
 }
 
 .input:hover,
 .input:focus {
-  border-color: var(--borderSecondary);
+  border-color: rgba(0, 0, 0, 0.2);
 }
 
 .input--block {
-  margin-bottom: 0.5em;
+  margin-bottom: .5em;
   display: block;
   width: 100%;
 }
 
 .input--textarea {
   line-height: 1.15;
-  font-family: monospace;
+  font-family: "Inter", sans-serif;
   min-height: 10em;
   resize: vertical;
 }
 
 .input--red {
-  background: var(--input-red) !important;
+  background: #fcd0cd;
 }
 
 .input--green {
-  background: var(--input-green) !important;
+  background: #c9f2da;
 }
