--- a/frontend/src/css/_shell.css
+++ b/frontend/src/css/_shell.css
@@ -3,8 +3,17 @@
   bottom: 0;
   left: 0;
   max-height: calc(100% - 4em);
-  background: var(--surfacePrimary);
-  color: var(--textPrimary);
+  background: white;
+  color: #212121;
+  z-index: 9997;
+  width: 100%;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  transition: .2s ease transform;
+}
+
+.shell__divider {
+  position: relative;
+  height: 8px;
   z-index: 9999;
   background: rgba(127, 127, 127, 0.1);
   transition: 0.2s ease background;
@@ -23,8 +32,6 @@
   overflow: auto;
   font-size: 1rem;
   cursor: text;
-  box-shadow: 0 0 5px var(--borderPrimary);
-  transition: 0.2s ease transform;
 }
 
 .shell__overlay {
@@ -45,7 +52,7 @@ body.rtl .shell-content {
   display: flex;
   padding: 0.5em;
   align-items: flex-start;
-  border-top: 1px solid var(--divider);
+  border-top: 1px solid rgba(0, 0, 0, 0.05);
 }
 
 .shell--hidden {
