--- a/frontend/src/css/styles.css
+++ b/frontend/src/css/styles.css
@@ -1,6 +1,6 @@
 @import "normalize.css/normalize.css";
-@import "vue-toastification/dist/index.css";
-@import "vue-final-modal/style.css";
+@import "noty/lib/noty.css";
+@import "noty/lib/themes/mint.css";
 @import "./_variables.css";
 @import "./_buttons.css";
 @import "./_inputs.css";
@@ -16,21 +16,8 @@
 @import "./login.css";
 @import "./mobile.css";
 
-/* For testing only
- :focus {
-  outline: 2px solid crimson !important;
-  border-radius: 3px !important;
-} */
-
 .link {
   color: var(--blue);
-}
-
-#loading {
-  background: var(--background);
-}
-#loading .spinner > div {
-  background: var(--iconPrimary);
 }
 
 main .spinner {
@@ -45,7 +32,7 @@ main .spinner > div {
   height: 0.8em;
   margin: 0 0.1em;
   font-size: 1em;
-  background: var(--iconPrimary);
+  background-color: rgba(0, 0, 0, 0.3);
   border-radius: 100%;
   display: inline-block;
   animation: sk-bouncedelay 1.4s infinite ease-in-out both;
@@ -85,7 +72,7 @@ main .spinner .bounce2 {
   transition: 0.2s ease all;
   border: 0;
   margin: 0;
-  color: var(--action);
+  color: #546e7a;
   border-radius: 50%;
   background: transparent;
   padding: 0;
@@ -107,7 +94,7 @@ main .spinner .bounce2 {
 }
 
 .action:hover {
-  background-color: var(--hover);
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .action ul {
@@ -128,7 +115,7 @@ main .spinner .bounce2 {
 }
 
 .action ul li:hover {
-  background-color: var(--divider);
+  background-color: rgba(0, 0, 0, 0.04);
 }
 
 #click-overlay {
@@ -151,7 +138,7 @@ main .spinner .bounce2 {
   bottom: 0;
   right: 0;
   background: var(--blue);
-  color: var(--iconSecondary);
+  color: #fff;
   border-radius: 50%;
   font-size: 0.75em;
   width: 1.8em;
@@ -159,13 +146,14 @@ main .spinner .bounce2 {
   text-align: center;
   line-height: 1.55em;
   font-weight: bold;
-  border: 2px solid var(--borderPrimary);
+  border: 2px solid white;
 }
 
 /* PREVIEWER */
 
 #previewer {
-  background-color: rgba(0, 0, 0, 0.99);
+  background-color: rgba(0, 0, 0, 0.9);
+  padding-top: 4em;
   position: fixed;
   top: 0;
   left: 0;
@@ -178,25 +166,15 @@ main .spinner .bounce2 {
 #previewer header {
   background: none;
   color: #fff;
-  border-bottom: 0px;
-  box-shadow: 0px 0px 0px;
-  z-index: 19999;
 }
 
 #previewer header > .action i {
   color: #fff;
-  text-shadow: 1px 1px 1px #000000;
-}
-
-#previewer header > title {
-  white-space: nowrap;
-  text-shadow: 1px 1px 1px #000000;
 }
 
 @media (min-width: 738px) {
   #previewer header #dropdown .action i {
     color: #fff;
-    text-shadow: 1px 1px 1px #000000;
   }
 }
 
@@ -210,7 +188,7 @@ main .spinner .bounce2 {
 
 #previewer .preview {
   text-align: center;
-  height: 100%;
+  height: calc(100vh - 4em);
 }
 
 #previewer .preview pre {
@@ -223,11 +201,6 @@ main .spinner .bounce2 {
 #previewer .preview img {
   max-height: 100%;
   margin: 0;
-}
-
-#previewer .preview audio {
-  width: 95%;
-  height: 88%;
 }
 
 #previewer .preview video {
@@ -274,7 +247,7 @@ main .spinner .bounce2 {
 #previewer > button {
   margin: 0;
   position: fixed;
-  top: 50%;
+  top: calc(50% + 1.85em);
   transform: translateY(-50%);
   background-color: rgba(80, 80, 80, 0.5);
   color: white;
@@ -314,7 +287,7 @@ main .spinner .bounce2 {
 #previewer .spinner > div {
   width: 18px;
   height: 18px;
-  background: var(--iconPrimary);
+  background-color: white;
 }
 
 /* EDITOR */
@@ -322,19 +295,15 @@ main .spinner .bounce2 {
 #editor-container {
   display: flex;
   flex-direction: column;
-  background-color: var(--background);
+  background-color: #fafafa;
   position: fixed;
   padding-top: 4em;
   top: 0;
   left: 0;
   height: 100%;
   width: 100%;
-  z-index: 9998;
+  z-index: 9999;
   overflow: hidden;
-}
-
-#editor-container .bar {
-  background: var(--surfacePrimary);
 }
 
 #editor-container #editor {
@@ -347,7 +316,7 @@ main .spinner .bounce2 {
 }
 
 /*** RTL - flip and position arrow of path ***/
-html[dir="rtl"] .breadcrumbs .chevron {
+body.rtl .breadcrumbs .chevron {
   transform: scaleX(-1) translateX(16em);
 }
 
@@ -356,6 +325,22 @@ html[dir="rtl"] .breadcrumbs .chevron {
 }
 
 #editor-container .breadcrumbs i {
+  font-size: 1rem;
+}
+
+/* * * * * * * * * * * * * * * *
+ *            PROMPT           *
+ * * * * * * * * * * * * * * * */
+
+.noty_buttons {
+  text-align: right;
+  padding: 0 10px 10px !important;
+}
+
+.noty_buttons button {
+  background: rgba(0, 0, 0, 0.05);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 0 0;
   font-size: 1rem;
 }
 
@@ -436,17 +421,17 @@ html[dir="rtl"] .breadcrumbs .chevron {
  *         RTL overrides       *
  * * * * * * * * * * * * * * * */
 
-html[dir="rtl"] .card-content textarea {
+body.rtl .card-content textarea {
   direction: ltr;
   text-align: left;
 }
 
-html[dir="rtl"] .card-content .small + input {
+body.rtl .card-content .small + input {
   direction: ltr;
   text-align: left;
 }
 
-html[dir="rtl"] .card.floating .card-content .file-list {
+body.rtl .card.floating .card-content .file-list {
   direction: ltr;
   text-align: left;
 }
