hotfix: fixed issue with password managers, closing issues https://github.com/filebrowser/filebrowser/issues/2518 https://github.com/filebrowser/filebrowser/issues/2035

--- a/frontend/src/css/_inputs.css
+++ b/frontend/src/css/_inputs.css
@@ -19,6 +19,12 @@
   width: 100%;
 }
 
+.input--secure{
+    text-security:disc;
+    -webkit-text-security:disc;
+    -mox-text-security:disc;
+}
+
 .input--textarea {
   line-height: 1.15;
   font-family: monospace;
