--- a/frontend/src/css/_shell.css
+++ b/frontend/src/css/_shell.css
@@ -14,15 +14,23 @@
   width: 100%;
 }
 
+:root.dark {
+  .shell {
+    background: rgba(30, 30, 30, 0.6);
+  }
+  .shell__text {
+    color: white;
+  }
+}
+
 .shell__divider{
   background: rgba(127, 127, 127, 0.3);
   width: 100%;
   height: 8px;
 }
+
 .shell__divider:hover {
   background: rgba(127, 127, 127, 0.9);
-  
-
 }
 
 .shell__content {
