Update login logo size in login.css

--- a/frontend/src/css/login.css
+++ b/frontend/src/css/login.css
@@ -8,9 +8,9 @@
 }
 
 #login img {
-  width: 4em;
-  height: 4em;
-  margin: 0 auto;
+  width: 10em;
+  height: 10em;
+  margin: 0 auto 4em;
   display: block;
 }
 
